--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["airbnb-base", "prettier"],
+    "extends": ["airbnb", "prettier"],
     "plugins": ["prettier"],
     "rules": {
       "object-shorthand": ["error", "never"],
