--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "eslint": "^7.22.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "prettier-eslint": "^12.0.0",
     "react": "^17.0.1",
