--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "eslint": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "prettier-eslint": "^12.0.0",
